--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isekai Tech</title>
 </head>
-<body class="bg-primary">
-    Ini teh bapak budi .. yo
+<body class="bg-light"><!--Background-->
+    <div class="navbar navbar-expand-sm navbar-dark">
+        <a class="navbar-brand" href="https://isekai-tech.github.io.">Home</a>
+    </div>
 </body>
 </html>
