--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body class="bg-light"><!--Background-->
     <div class="navbar navbar-expand-sm navbar-dark">
         <a class="navbar-brand" href="https://isekai-tech.github.io.">Home</a>
+        <p>
+          somebody say  
+        </p>
     </div>
 </body>
 </html>
