--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Isekai Tech</title>
 </head>
 <body class="bg-light"><!--Background-->
-    <div class="navbar navbar-expand-sm navbar-dark">
+    <div class="navbar navbar-expand-sm navbar-dark text-dark">
         <a class="navbar-brand" href="https://isekai-tech.github.io.">Home</a>
         <p>
           somebody say  
