--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Isekai Tech</title>
 </head>
 <body class="bg-light"><!--Background-->
-    <div class="navbar navbar-expand-sm navbar-dark text-dark">
+    <div class="navbar navbar-expand-sm navbar-dark text-dark"> <!--Top Page Bar-->
         <a class="navbar-brand" href="https://isekai-tech.github.io.">Home</a>
-        <p>
-          somebody say  
-        </p>
+    </div>
+    <div class="container"><!--Content-->
+        <h1>Welcome in This</h1>
     </div>
 </body>
 </html>
