--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     <title>Isekai Tech</title>
 </head>
 <body class="bg-light"><!--Background-->
-    <div class="navbar navbar-expand-sm navbar-dark text-dark"> <!--Top Page Bar-->
-        <a class="navbar-brand" href="https://isekai-tech.github.io.">Home</a>
+    <div class="navbar navbar-expand-sm badge-dark"> <!--Top Page Bar-->
+        <a class="navbar-brand text-light active" href="https://isekai-tech.github.io.">Home</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link text-light">Artikel</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Cari Artikel</button>
+        </form>
     </div>
     <div class="container"><!--Content-->
         <h1>Welcome in This</h1>
-        <p>Article</p>
+        <p>Article </p>
     </div>
 </body>
 </html>
