--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="https://isekai-tech.github.io./style.css" >
-<script src="https://kit.fontawesome.com/a81368914c.js"></script> 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isekai Tech</title>
-</head>
-<body class="bg-light"><!--Background-->
-    <div class="navbar navbar-expand-sm badge-dark"> <!--Top Page Bar-->
-        <a class="navbar-brand text-light active" href="https://isekai-tech.github.io.">Home</a>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link text-light">Artikel</a>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
-        </form>
-    </div>
-    <div class="container"><!--Content-->
-        <h1>Welcome in This</h1>
-        <p>Article </p>
-    </div>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://isekai-tech.github.io/welcome.html">
