--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <meta http-equiv="refresh" content="0; url=https://isekai-tech.github.io/welcome.html">
+<meta http-equiv="refresh" content="0; url=https://isekai-tech.github.io/artikel/artikel.html">
