--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,7 @@
         <a class="navbar-brand text-light active" href="https://isekai-tech.github.io.">Home</a>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link text-light">Artikel</a>
+                <a class="nav-link text-light" href="https://isekai-tech.github.io/artikel/artikel.html">Artikel</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
