--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
                 <a class="nav-link text-light" href="https://isekai-tech.github.io/artikel/">Artikel</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+        <form class='navbar-form'>
+          <div class='input-group'>
+            <input class='form-control' type='text' name='search' placeholder='Location' />
+            <span class="input-group-btn">
+              <button type='submit' class='btn btn-default'>
+                <span class='glyphicon glyphicon-search'></span>
+              </button>
+            </span>
+          </div>
         </form>
     </div>
     <div class="container bg-transparent"><!--Content-->
