--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </ul>
         <form class='navbar-form'>
           <div class='input-group'>
-            <input class='form-control' type='text' name='search' placeholder='Location' />
+            <input class='form-control' type='text' name='search' placeholder='Location'>
             <span class="input-group-btn">
               <button type='submit' class='btn btn-default'>
-                <span class='glyphicon glyphicon-search'></span>
+                <span ><i class="fas fa-search"></i></span>
               </button>
             </span>
           </div>
