--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="https://isekai-tech.github.io./style.css" >
-<script src="https://kit.fontawesome.com/a81368914c.js"></script> 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isekai Tech</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Otomatisasi Surat</title>
+	<link rel="icon" href="asset/image/SMKN4.png">
+	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="asset/css/inde.css">
+	<script src="https://kit.fontawesome.com/a81368914c.js"></script> 
 </head>
 <body class="bg-light"><!--Background-->
     <div class="navbar navbar-expand-sm badge-dark"> <!--Top Page Bar-->
@@ -16,20 +17,25 @@
                 <a class="nav-link text-light" href="https://isekai-tech.github.io/artikel/">Artikel</a>
             </li>
         </ul>
-        <form class='navbar-form'>
-          <div class='input-group'>
-            <input class='form-control' type='text' name='search' placeholder='Location'>
-            <span class="input-group-btn">
-              <button type='submit' class='btn btn-default'>
+        <form>
+          <div class="input-group-prepend">
+            <input class="form-control" type="text" name="search" placeholder="Cari">
+            <span class="input-group-btn ml-1">
+              <button type="submit" class="btn btn-light">
                 <span ><i class="fas fa-search"></i></span>
               </button>
             </span>
           </div>
         </form>
     </div>
-    <div class="container bg-transparent"><!--Content-->
+    <div class="container bg-secondary col-sm-8"><!--Content-->
         <h1>Welcome in This</h1>
-        <p>Article </p>
-    </div>
+        <p>Article </p>  
 </body>
+<footer>
+    <div class="nav fixed-bottom navbar badge-dark">
+        <h6>Made BY 3 person</h6>
+        <h6>Copyright ya ugh ugh</h6>
+    </div>
+</footer>
 </html>
