--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="https://isekai-tech.github.io./style.css" >
+<script src="https://kit.fontawesome.com/a81368914c.js"></script> 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Otomatisasi Surat</title>
-	<link rel="icon" href="asset/image/SMKN4.png">
-	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="asset/css/inde.css">
-	<script src="https://kit.fontawesome.com/a81368914c.js"></script> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Isekai Tech</title>
 </head>
 <body class="bg-light"><!--Background-->
     <div class="navbar navbar-expand-sm badge-dark"> <!--Top Page Bar-->
