--- a/artikel/index.html
+++ b/artikel/index.html
@@ -16,9 +16,15 @@
                 <a class="nav-link text-light">Artikel</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+        <form>
+          <div class="input-group-prepend">
+            <input class="form-control" type="text" name="search" placeholder="Cari">
+            <span class="input-group-btn ml-1">
+              <button type="submit" class="btn btn-light">
+                <span ><i class="fas fa-search"></i></span>
+              </button>
+            </span>
+          </div>
         </form>
     </div>
     <div class="container bg-transparent"><!--Content-->
