--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="container bg-secondary col-sm-8"><!--Content-->
         <h1>Welcome in This</h1>
-        <p>Artiker </p>  
+        <p>Artikel </p>  
 </body>
 <footer>
     <div class="nav fixed-bottom navbar badge-dark">
